syntax = "proto3";

package test.v1;

import "google/protobuf/timestamp.proto";
import "j5/bcl/v1/annotations.proto";
import "j5/ext/v1/annotations.proto";

option go_package = "github.com/pentops/bcl.go/gen/test/v1/test_pb";

message File {
  repeated Element elements = 3;

  j5.bcl.v1.SourceLocation source_location = 10;

  string s_string = 11;
  repeated string r_string = 12;
  map<string, string> tags = 13 [(j5.ext.v1.field).map.single_form = "tag"];
}

message Element {
  oneof type {
    Foo foo = 1;
    Bar bar = 2;
  }

  message Foo {
    string name = 1;
    string description = 2;
  }

  message Bar {
    string name = 1;
  }
}
